updated to echoes -ng2

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic.cloud.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -26,7 +27,7 @@
   <body ng-app="starter" class="platform-android">
     <ion-view view-title="Browse">
       <ion-content>
-         <iframe src="http://www.echotu.be" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+         <iframe src="http://orizens.github.io/echoes-ng2" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
       </ion-content>
     </ion-view>
   </body>
